--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -26,7 +26,7 @@ jobs:
 
     - uses: actions/setup-go@v5
       with:
-        go-version: '1.18'
+        go-version: '1.22'
 
     - uses: chainguard-dev/actions/setup-registry@main
       with:
@@ -34,11 +34,22 @@ jobs:
 
     - uses: hashicorp/setup-terraform@v3
       with:
-        terraform_version: '1.3.*'
+        terraform_version: '1.8.*'
         terraform_wrapper: false
 
     - working-directory: ./examples/${{ matrix.example }}
+      env:
+        TF_VAR_target_repository: localhost:5000/${{ matrix.example }}
       run: |
-        export TF_VAR_target_repository=localhost:5000/${{ matrix.example }}
+        terraform init -upgrade
+        terraform apply -auto-approve
+
+    # Test with archs and check_sbom=false
+    - working-directory: ./examples/${{ matrix.example }}
+      env:
+        TF_VAR_target_repository: localhost:5000/${{ matrix.example }}
+        TF_VAR_archs: '["x86_64"]'
+        TF_VAR_check_sbom: 'false'
+      run: |
         terraform init -upgrade
         terraform apply -auto-approve
