--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -36,6 +36,7 @@ jobs:
     - working-directory: ./examples/static
       env:
         TF_VAR_target_repository: localhost:5000/static
+        TF_VAR_verify: ${{github.event_name == 'pull_request_target'}}
       run: |
         terraform init -upgrade
         terraform apply -auto-approve
@@ -46,6 +47,7 @@ jobs:
         TF_VAR_target_repository: localhost:5000/static
         TF_VAR_archs: '["x86_64"]'
         TF_VAR_check_sbom: 'false'
+        TF_VAR_verify: ${{github.event_name == 'pull_request_target'}}
       run: |
         terraform init -upgrade
         terraform apply -auto-approve
